# podcast-server-side-rendering

./: CNAME  README.md  app.js  db.js  package-lock.json  package.json  podcast.db
.github/workflows/: main_podcast-upo.yml
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/backend_podcast/: main.py
backend/backend_podcast/database/: conn.py  models.py
backend/backend_podcast/libs/: auth.py  crypto.py
backend/backend_podcast/routes/: auth.py
backend/docker/: .dockerignore  Dockerfile  docker.py
models/: episodes-dao.js  series-dao.js  user-dao.js
public/javascripts/: alert.js  comments.js  delete-buttons.js  favorite-buttons.js  following-buttons.js  listen-buttons.js  logout-button.js  research-form.js  signup.js  update-account-photo.js  update-episode.js  update-series.js
public/stylesheets/: style.css
routes/: comments.js  episodes-created.js  episodes.js  favorite-episodes.js  purchased-episodes.js  series-created.js  series-followed.js  series.js  session.js  users.js
views/: account.ejs  comments.ejs  confirm-modal.ejs  edit-and-delete-buttons.ejs  episode-partial.ejs  episodes.ejs  following-button.ejs  header.ejs  info-series.ejs  login-button.ejs  login-signup.ejs  new-or-edit-episode.ejs  new-or-edit-series.ejs  payment.ejs  research-form.ejs  series-created.ejs  series.ejs
